--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <ion-icon name="people"></ion-icon>
             <p>Todos</p>
           </div>
-          <ion-icon class="check" name="checkmark-outline"></ion-icon>
+          <ion-icon class="check selected" name="checkmark-outline"></ion-icon>
         </div>
         <div class="contact">
           <div class="info">
@@ -89,7 +89,7 @@
           <ion-icon name="lock-open"></ion-icon>
           <p>Público</p>
         </div>
-        <ion-icon class="check" name="checkmark-outline"></ion-icon>
+        <ion-icon class="check selected" name="checkmark-outline"></ion-icon>
       </div>
       <div class="visibility">
         <div class="info">
