Load members area implemented

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </div>
 
       <div class="contacts">
-        <div class="contact">
+        <div class="contact" onclick="selectMember(this);">
           <div class="info">
             <ion-icon name="people"></ion-icon>
             <p>Todos</p>
