Difference between messages added and possibility to chosse adresser

--- a/index.html
+++ b/index.html
@@ -6,12 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style/reset.css" type="text/css" />
     <link rel="stylesheet" href="style/style.css" type="text/css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,400&display=swap" rel="stylesheet">
     <!-- Console dos browsers indicaram que adicionar aqui melhoraria a eficiência -->
     <script
       type="module"
@@ -102,9 +99,7 @@
     <div class="close-sidebar isClose"></div>
 
     <footer>
-      <form action="">
-        <input type="text" placeholder="Escreva aqui..." />
-      </form>
+      <input type="text" placeholder="Escreva aqui..." />
       <ion-icon name="paper-plane-outline"></ion-icon>
     </footer>
 
