--- a/index.html
+++ b/index.html
@@ -17,8 +17,14 @@
     <title>Bate-Papo Uol</title>
   </head>
   <body>
+    <section class="login">
+      <img src="images/logo.svg" alt="Bate-papo Uol"/>
+      <input type="text" placeholder="Digite seu nome">
+      <button>Entrar</button>
+    </section>
+
     <header>
-      <img src="images/logo.jpg" alt="Bate-Papo Uol" />
+      <img src="images/logo.svg" alt="Bate-Papo Uol" />
       <ion-icon class="open-sidebar" name="people"></ion-icon>
     </header>
 
