--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   <body>
     <section class="login">
       <img src="images/logo.svg" alt="Bate-papo Uol"/>
-      <input type="text" class="" placeholder="Digite seu nome">
-      <button class="">Entrar</button>
+      <input type="text" placeholder="Digite seu nome">
+      <button>Entrar</button>
       <img src="images/96x96.gif" class="loading isClose" alt="loading">
       <p class="isClose">Entrando...</p>
     </section>
