--- a/index.html
+++ b/index.html
@@ -107,7 +107,10 @@
     <div class="close-sidebar isClose"></div>
 
     <footer>
-      <input type="text" placeholder="Escreva aqui..." />
+      <div class="message-field">
+        <input type="text" placeholder="Escreva aqui..." />
+        <p class="isClose">Enviando para Maria(Reservadamente)</p>
+      </div>
       <ion-icon name="paper-plane-outline"></ion-icon>
     </footer>
 
